k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: storybook-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.allow-http: "true"
    kubernetes.io/ingress.global-static-ip-name: "storybook-ip"
    networking.gke.io/managed-certificates: "storybook-cert"
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: storybook-backend
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: storybook-ui
                port:
                  number: 80
